[package]
name = "rfkill-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
libc = "0.2.132"
num-derive = "0.3.3"
num-traits = "0.2.15"

[build-dependencies]
bindgen = { version = "0.60.1", optional = true }

[features]
use-bindgen = [ "dep:bindgen" ]
